--- a/src/index.css
+++ b/src/index.css
@@ -50,3 +50,11 @@
   display: table;
   margin: 0 auto;
 }
+
+.instances-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  
+}
