--- a/src/pages/Landing Page/About.module.css
+++ b/src/pages/Landing Page/About.module.css
@@ -1,3 +1,18 @@
+.section {
+  display: flex;
+  justify-content: center;
+  margin: auto;
+  margin-top: 2.5rem;
+
+  border-bottom: solid 2px black;
+}
+
 .about_wrapper {
   text-align: center;
+  padding: 1.25rem;
+  width: 80%;
+  height: auto;
+  /* box-shadow: 0 3px 10px #a17a69; */
+  margin: 5px;
+  border-radius: 10px;
 }
