--- a/src/pages/Landing Page/SupportedLanguages.module.css
+++ b/src/pages/Landing Page/SupportedLanguages.module.css
@@ -1,9 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,700&display=swap');
 
-.skills {
+.section {
   margin: auto;
   text-align: center;
-  margin-top: 2.5rem;
+  padding-bottom: 1.5rem;
+  border-bottom: solid 3px black;
 }
 
 .skill_header {
@@ -11,7 +12,7 @@
 }
 
 .skills_wrapper {
-  border: 2px solid blue;
+
 }
 
 .skills_wrapper img {
@@ -23,6 +24,8 @@
   margin: 5px;
   border-radius: 10px;
 
+
+  
 }
 
 .icon {
