--- a/src/pages/Landing Page/SupportedLanguages.module.css
+++ b/src/pages/Landing Page/SupportedLanguages.module.css
@@ -4,7 +4,8 @@
   margin: auto;
   text-align: center;
   padding-bottom: 1.5rem;
-  border-bottom: solid 3px black;
+  border-bottom: solid 2px grey;
+  width: 85%;
 }
 
 .skill_header {
